# DJ_Forest_Template

./: .bandit  .gitignore  .gitmodules  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  Makefile  README.md  pyproject.toml  pytest.ini
.atl/: skill-registry.md
.github/workflows/: ci.yml
SKILLS/django-htmx/: SKILL.md
SKILLS/local-architecture-routing/: SKILL.md
SKILLS/local-architecture-templates/: SKILL.md
SKILLS/local-architecture-templates/scripts/: template-contribute.sh  template-diff.sh  template-pr-check.sh
SKILLS/parallel-worktrees/: SKILL.md
SKILLS/template-repo-workflow/: SKILL.md
src/apps/common/: apps.py  context_processors.py  models.py
src/apps/common/migrations/: 0001_initial.py
src/apps/dashboard/: models.py  tasks.py  tests.py  urls.py  views.py
src/apps/dashboard/migrations/: 0001_initial.py  0002_initial.py
src/apps/users/: admin.py  models.py
src/apps/users/migrations/: 0001_initial.py
src/apps/users/tests/: test_auth.py  test_models.py  test_templates.py
src/config/: urls.py
src/config/settings/: base.py  dev.py
src/config/settings/core/: loggin.py  storage.py
src/requirements/: base.txt  local.txt
src/static/css/: styles.css
src/static/js/: alpine_init.js  theme.js
src/templates/: base.html
src/templates/account/: confirm_login_code.html  delete.html  email.html  email_change.html  email_confirm.html  login.html  logout.html  password_change.html  password_reset.html  password_reset_done.html  password_reset_from_key.html  password_set.html  reauthenticate.html  signup.html  social_connections.html
src/templates/components/: alert.html  badge.html  error_block.html  messages.html  navbar.html  toast_trigger.html
src/templates/components/Layout/: Brand.html  bottom_nav.html  navbar.html
src/templates/components/ui/: button.html  input.html  (+1 more)
src/templates/dashboard/: base.html  home.html  profile.html  settings.html  subscription_plans.html
src/templates/landing/: cta.html  footer.html
(+4 files in other folders)
