[build-system]
requires = ["uv_build >= 0.11.7"]
build-backend = "uv_build"

[project]
name = "django-fortress"
version = "1.0.0"
description = "Security-first Django 6.x SaaS monolith"
requires-python = ">=3.12"
dependencies = [
    "Django>=6.0.4",
    "django-allauth>=65.16.0",
    "asgiref>=3.11.1",
    "packaging>=26.1",
    "sqlparse>=0.5.5",
    "gunicorn>=23.0.0",
    "django-environ>=0.11.2",
    "django-widget-tweaks>=1.5.1",
]

[dependency-groups]
dev = [
    "django-debug-toolbar>=6.3.0",
    "pytest>=9.0.3",
    "pytest-django>=4.12.0",
    "pytest-cov>=6.0.0",
    "ruff>=0.9.1",
    "pyright>=1.1.391",
    "bandit>=1.8.2",
    "semgrep>=1.106.0",
    "pre-commit>=4.1.0",
    "Pygments>=2.20.0",
    "iniconfig>=2.3.0",
    "pluggy>=1.6.0",
    "django-stubs>=6.0.5",
    "righttyper>=0.0.9",
    "autotyping>=24.9.0",
]

[tool.ruff]
target-version = "py312"
line-length = 88
exclude = [
    "**/migrations/*",
]

[tool.ruff.lint]
# Rules: Style (E, W), Imports (I), Security (S), Bugbear (B), Upgrade (UP), Django (DJ)
select = ["E", "F", "W", "I", "S", "B", "UP", "DJ", "N", "RUF"]
ignore = [
    "S101", # Allow assert (needed for pytest)
    "DJ001", # Allow nullable string fields in models if preferred
    "F403", # Allow star imports in settings
    "F405", # Allow names from star imports
    "E402", # Allow module level imports not at top (for modular settings)
]

[tool.ruff.lint.per-file-ignores]
"src/config/settings/*.py" = ["F403", "F405"]

[tool.ruff.lint.isort]
known-first-party = ["apps", "config"]

[tool.ruff.lint.flake8-quotes]
docstring-quotes = "double"
inline-quotes = "single"

[tool.pyright]
include = ["src"]
exclude = ["**/migrations", "**/tests"]
typeCheckingMode = "strict"
reportMissingTypeStubs = false
pythonVersion = "3.13"
pythonPlatform = "Linux"
venvPath = "."
venv = ".venv"

[tool.uv]
managed = true
package = false
